syntax = "proto3";
package web_api;

service WebApi {
  rpc ListRoom(UserIdRequest) returns (RoomsListReply);
}

message UserIdRequest {
  string user_id = 1;
}

message RoomsListReply {
  message Room {
    string room_id = 1;
    string display_name = 2;
  }

  repeated Room rooms = 1;
}